@@ -28,115 +28,6 @@
 	</properties>
 
 	<profiles>
-		<!-- Contract tests profile -->
-		<profile>
-			<id>it</id>
-			<properties>
-				<surefire.commands>
-					--enable-preview
-				</surefire.commands>
-				<surefire.file>
-					-Dfile.encoding=${project.build.sourceEncoding}
-				</surefire.file>
-				<surefire.memory>
-					-Xmx1024m
-					-XX:ReservedCodeCacheSize=1G
-					-Dsun.zip.disableMemoryMapping=true
-				</surefire.memory>
-				<surefire.network>
-					-Djava.net.preferIPv4Stack=true
-					-Djdk.net.URLClassPath.disableClassPathURLCheck=true
-				</surefire.network>
-				<surefire.timezone>
-					-Duser.timezone=Europe/Moscow
-				</surefire.timezone>
-				<surefire.agent>
-					-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-				</surefire.agent>
-			</properties>
-			<build>
-				<pluginManagement>
-					<plugins>
-						<plugin>
-							<groupId>org.apache.maven.plugins</groupId>
-							<artifactId>maven-surefire-plugin</artifactId>
-							<version>${maven-surefire-plugin.version}</version>
-							<configuration>
-								<reuseForks>false</reuseForks>
-								<forkCount>1</forkCount>
-								<useSystemClassLoader>false</useSystemClassLoader>
-								<testFailureIgnore>false</testFailureIgnore>
-								<forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
-								<argLine>
-									${surefire.agent}
-									${surefire.memory}
-									${surefire.file}
-									${surefire.network}
-									${surefire.timezone}
-									${surefire.commands}
-								</argLine>
-								<classpathDependencyExcludes>
-									<classpathDependencyExcludes>org.projectlombok:lombok</classpathDependencyExcludes>
-								</classpathDependencyExcludes>
-								<properties>
-									<property>
-										<name>listener</name>
-										<value>org.junit.platform.launcher.listeners.SummaryGeneratingListener</value>
-									</property>
-								</properties>
-								<systemProperties>
-									<property>
-										<name>allure.results.directory</name>
-										<value>${project.build.directory}/allure-results</value>
-									</property>
-									<property>
-										<name>allure.reports.directory</name>
-										<value>${project.build.directory}/allure-reports</value>
-									</property>
-								</systemProperties>
-							</configuration>
-							<dependencies>
-								<dependency>
-									<groupId>org.aspectj</groupId>
-									<artifactId>aspectjweaver</artifactId>
-									<version>${aspectj.version}</version>
-								</dependency>
-								<dependency>
-									<groupId>org.apache.maven.surefire</groupId>
-									<artifactId>maven-surefire-common</artifactId>
-									<version>${maven-surefire-plugin.version}</version>
-								</dependency>
-							</dependencies>
-						</plugin>
-
-						<plugin>
-							<groupId>io.qameta.allure</groupId>
-							<artifactId>allure-maven</artifactId>
-							<version>${maven-allure-plugin.version}</version>
-							<configuration>
-								<outputDirectory>${project.build.directory}</outputDirectory>
-								<reportingOutputDirectory>${project.build.directory}</reportingOutputDirectory>
-							</configuration>
-						</plugin>
-					</plugins>
-				</pluginManagement>
-
-				<!-- Use in lifecycle -->
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<version>${maven-surefire-plugin.version}</version>
-					</plugin>
-					<plugin>
-						<groupId>io.qameta.allure</groupId>
-						<artifactId>allure-maven</artifactId>
-						<version>${maven-allure-plugin.version}</version>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
 		<!-- Uber jar profile -->
 		<profile>
 			<id>uber</id>
@@ -186,68 +77,20 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpmime</artifactId>
 			<version>${httpmime.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Junit5 dependencies -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit-jupiter.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.jupiter</groupId>-->
-		<!--			<artifactId>junit-jupiter-migrationsupport</artifactId>-->
-		<!--			<version>${junit-jupiter.version}</version>-->
-		<!--			<exclusions>-->
-		<!--				<exclusion>-->
-		<!--					<groupId>org.hamcrest</groupId>-->
-		<!--					<artifactId>hamcrest-core</artifactId>-->
-		<!--				</exclusion>-->
-		<!--			</exclusions>-->
-		<!--		</dependency>-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.jupiter</groupId>-->
-		<!--			<artifactId>junit-jupiter-params</artifactId>-->
-		<!--			<version>${junit-jupiter.version}</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-engine</artifactId>
-			<version>${junit-jupiter.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.platform</groupId>-->
-		<!--			<artifactId>junit-platform-launcher</artifactId>-->
-		<!--			<version>${junit-platform.version}</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.platform</groupId>-->
-		<!--			<artifactId>junit-platform-runner</artifactId>-->
-		<!--			<version>${junit-platform.version}</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.platform</groupId>-->
-		<!--			<artifactId>junit-platform-commons</artifactId>-->
-		<!--			<version>${junit-platform.version}</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
-		<!--		<dependency>-->
-		<!--			<groupId>org.junit.platform</groupId>-->
-		<!--			<artifactId>junit-platform-engine</artifactId>-->
-		<!--			<version>${junit-platform.version}</version>-->
-		<!--			<scope>test</scope>-->
-		<!--		</dependency>-->
 		<dependency>
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite</artifactId>
-			<version>${junit-platform.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Cucumber dependencies -->
@@ -262,7 +105,6 @@
 		<dependency>
 			<groupId>io.cucumber</groupId>
 			<artifactId>cucumber-junit-platform-engine</artifactId>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Selenide dependencies -->
@@ -270,7 +112,6 @@
 			<groupId>com.codeborne</groupId>
 			<artifactId>selenide</artifactId>
 			<version>${selenide.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Assertj dependencies -->
@@ -278,7 +119,6 @@
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<version>${assertj.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Allure dependencies -->
@@ -286,39 +126,29 @@
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-junit5</artifactId>
 			<version>${allure.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>io.qameta.allure</groupId>
 			<artifactId>allure-cucumber-jvm</artifactId>
 			<version>${allure.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 
 		<!-- Test Api dependencies-->
 		<dependency>
 			<groupId>tech.arenadata.api.test</groupId>
 			<artifactId>test-api-commons</artifactId>
-			<version>${test-api.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>tech.arenadata.api.test</groupId>
 			<artifactId>test-api-assertions</artifactId>
-			<version>${test-api.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>tech.arenadata.api.test</groupId>
 			<artifactId>test-api-client</artifactId>
-			<version>${test-api.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 		<dependency>
 			<groupId>tech.arenadata.api.test</groupId>
 			<artifactId>test-api-extensions</artifactId>
-			<version>${test-api.version}</version>
-<!--			<scope>test</scope>-->
 		</dependency>
 	</dependencies>
 
